implement harden-logging-observability